Fixed Resume-Content overlap

--- a/homestyle.css
+++ b/homestyle.css
@@ -214,7 +214,7 @@ nav > a:hover:not(.active) {
 
 .resume-content {
     float: left;
-    width: 80%;
+    width: 75%;
     font-family: 'Open Sans', serif;
 }
 
@@ -223,6 +223,7 @@ nav > a:hover:not(.active) {
     font-size: 1.1rem;
     margin-top: 0;
     font-family: 'Open Sans', serif;
+    margin-top: 5%;
 }
 
 .resume-date span {
